[package]
name = "wimlib-sys"
version = "0.1.13"
authors = ["Sander in 't Hout <sander@inthout.eu>"]
description = "FFI bindings for wimlib."
license = "GPL-3.0-or-later"
homepage = "https://github.com/h3x4d3c1m4l/wimlib-sys"
repository = "https://github.com/h3x4d3c1m4l/wimlib-sys.git"
readme = "README.md"
keywords = ["wim", "wimlib", "libwim", "bindings"]
edition = "2018"

links = "wim"

[build-dependencies]
bindgen = "0.49"

[dependencies]
sha2 = "0.8"
lazy_static = "1.3"