[package]
name = "wimlib-sys"
version = "1.0.0"
authors = ["Sander in 't Hout <sander@inthout.eu>"]
description = "FFI bindings for wimlib."
license = "GPL-3.0-or-later OR LGPL-3.0-or-later"
homepage = "https://github.com/n3d-qmp/wimlib-sys"
repository = "https://github.com/n3d-qmp/wimlib-sys.git"
readme = "README.md"
keywords = ["wim", "wimlib", "libwim", "bindings"]
edition = "2018"

links = "wim"

[build-dependencies]
bindgen = "0.65"

[dependencies]
sha2 = "0.10"
lazy_static = "1.4"